# Social-Inbox-Reinforcement-Learning-Environment

./: .dockerignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: message_data.json
server/: app.py  environment.py
